--- a/BACKEND1/requirements.txt
+++ b/BACKEND1/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.4
+Flask==3.0.2
 Flask-SQLAlchemy==3.0.3
 psycopg2-binary==2.9.7
 python-dotenv==1.0.0
 Flask-Cors==4.0.0
-Flask-JWT-Extended==4.4.4
+Flask-JWT-Extended==4.6.0
+gunicorn==21.2.0
